syntax = "proto3";

package tech.monstrs.referralprograms.v1alpha1;

import "google/protobuf/struct.proto";
import "tech/monstrs/queries/v1alpha1/queries.proto";

service ReferralProgramsService {
  rpc CreateReferralProgram(CreateReferralProgramRequest) returns (CreateReferralProgramResponse) {}
  rpc UpdateReferralProgram(UpdateReferralProgramRequest) returns (UpdateReferralProgramResponse) {}
  rpc AddReferralProgramRule(AddReferralProgramRuleRequest) returns (AddReferralProgramRuleResponse) {}
  rpc UpdateReferralProgramRule(UpdateReferralProgramRuleRequest) returns (UpdateReferralProgramRuleResponse) {}
  rpc DeleteReferralProgramRule(DeleteReferralProgramRuleRequest) returns (DeleteReferralProgramRuleResponse) {}
  rpc ListReferralPrograms(ListReferralProgramsRequest) returns (ListReferralProgramsResponse) {}
}

message ReferralProgramField {
  int32 percentage = 1;
  google.protobuf.Struct conditions = 2;
}

message ReferralProgramRule {
  string id = 1;
  string name = 2;
  int32 order = 3;
  google.protobuf.Struct conditions = 4;
  repeated ReferralProgramField fields = 5;
}

message ReferralProgram {
  string id = 1;
  string name = 2;
  string code = 3;
  int32 percentage = 4;
  repeated ReferralProgramRule rules = 5;
}

message CreateReferralProgramRequest {
  string name = 1;
  string code = 2;
  int32 percentage = 3;
}

message CreateReferralProgramResponse {
  ReferralProgram result = 1;
}

message UpdateReferralProgramRequest {
  string referral_program_id = 1;
  string name = 2;
  int32 percentage = 3;
}

message UpdateReferralProgramResponse {
  ReferralProgram result = 1;
}

message AddReferralProgramRuleRequest {
  string referral_program_id = 1;
  string name = 2;
  int32 order = 3;
  google.protobuf.Struct conditions = 4;
  repeated ReferralProgramField fields = 5;
}

message AddReferralProgramRuleResponse {
  ReferralProgram result = 1;
}

message UpdateReferralProgramRuleRequest {
  string referral_program_rule_id = 1;
  string referral_program_id = 2;
  string name = 3;
  int32 order = 4;
  google.protobuf.Struct conditions = 5;
  repeated ReferralProgramField fields = 6;
}

message UpdateReferralProgramRuleResponse {
  ReferralProgram result = 1;
}

message DeleteReferralProgramRuleRequest {
  string referral_program_rule_id = 1;
  string referral_program_id = 2;
}

message DeleteReferralProgramRuleResponse {
  ReferralProgram result = 1;
}

message ListReferralProgramsRequest {
  message ReferralProgramsQuery {
    tech.monstrs.queries.v1alpha1.Query.ID id = 1;
  }

  tech.monstrs.queries.v1alpha1.Query.Pager pager = 1;
  tech.monstrs.queries.v1alpha1.Query.Order order = 2;
  ReferralProgramsQuery query = 3;
}

message ListReferralProgramsResponse {
  repeated ReferralProgram referral_programs = 1;
  bool has_next_page = 2;
}
